--- a/BikeRidership.ipynb
+++ b/BikeRidership.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your first neural network\n",
+    "# Bike Rental Ridership Prediction using Numpy\n",
     "\n",
-    "In this project, you'll build your first neural network and use it to predict daily bike rental ridership. We've provided some of the code, but left the implementation of the neural network up to you (for the most part). After you've submitted this project, feel free to explore the data and the model more.\n",
-    "\n"
+    "In this project, a simple neural network implemented in Numpy is used to predict daily bike rental ridership. \n",
+    "\n",
+    "This project is from Udacity DLND curriculum and has been reivewed by Udacity reviewer.\n"
    ]
   },
   {
@@ -32,7 +33,7 @@
    "source": [
     "## Load and prepare the data\n",
     "\n",
-    "A critical step in working with neural networks is preparing the data correctly. Variables on different scales make it difficult for the network to efficiently learn the correct weights. Below, we've written the code to load and prepare the data. You'll learn more about this soon!"
+    "A critical step in working with neural networks is preparing the data correctly. Variables on different scales make it difficult for the network to efficiently learn the correct weights. "
    ]
   },
   {
@@ -229,9 +230,9 @@
    "source": [
     "## Checking out the data\n",
     "\n",
-    "This dataset has the number of riders for each hour of each day from January 1 2011 to December 31 2012. The number of riders is split between casual and registered, summed up in the `cnt` column. You can see the first few rows of the data above.\n",
+    "This dataset has the number of riders for each hour of each day from January 1 2011 to December 31 2012. The number of riders is split between casual and registered, summed up in the `cnt` column. We can see the first few rows of the data above.\n",
     "\n",
-    "Below is a plot showing the number of bike riders over the first 10 days or so in the data set. (Some days don't have exactly 24 entries in the data set, so it's not exactly 10 days.) You can see the hourly rentals here. This data is pretty complicated! The weekends have lower over all ridership and there are spikes when people are biking to and from work during the week. Looking at the data above, we also have information about temperature, humidity, and windspeed, all of these likely affecting the number of riders. You'll be trying to capture all this with your model."
+    "Below is a plot showing the number of bike riders over the first 10 days or so in the data set. (Some days don't have exactly 24 entries in the data set, so it's not exactly 10 days.) We can see the hourly rentals here. This data is pretty complicated! The weekends have lower over all ridership and there are spikes when people are biking to and from work during the week. Looking at the data above, we also have information about temperature, humidity, and windspeed, all of these likely affecting the number of riders. We'll be trying to capture all this with our model."
    ]
   },
   {
@@ -585,9 +586,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time to build the network\n",
+    "## The network\n",
     "\n",
-    "Below you'll build your network. We've built out the structure and the backwards pass. You'll implement the forward pass through the network. You'll also set the hyperparameters: the learning rate, the number of hidden units, and the number of training passes.\n",
+    "Below we'll build our network. \n",
     "\n",
     "<img src=\"assets/neural_network.png\" width=300px>\n",
     "\n",
@@ -595,19 +596,13 @@
     "\n",
     "We use the weights to propagate signals forward from the input to the output layers in a neural network. We use the weights to also propagate error backwards from the output back into the network to update our weights. This is called *backpropagation*.\n",
     "\n",
-    "> **Hint:** You'll need the derivative of the output activation function ($f(x) = x$) for the backpropagation implementation. If you aren't familiar with calculus, this function is equivalent to the equation $y = x$. What is the slope of that equation? That is the derivative of $f(x)$.\n",
     "\n",
-    "Below, you have these tasks:\n",
-    "1. Implement the sigmoid function to use as the activation function. Set `self.activation_function` in `__init__` to your sigmoid function.\n",
-    "2. Implement the forward pass in the `train` method.\n",
-    "3. Implement the backpropagation algorithm in the `train` method, including calculating the output error.\n",
-    "4. Implement the forward pass in the `run` method.\n",
     "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -629,20 +624,10 @@
     "                                       (self.hidden_nodes, self.output_nodes))\n",
     "        self.lr = learning_rate\n",
     "        \n",
-    "        #### TODO: Set self.activation_function to your implemented sigmoid function ####\n",
-    "        #\n",
-    "        # Note: in Python, you can define a function with a lambda expression,\n",
-    "        # as shown below.\n",
-    "        self.activation_function = lambda x : 1 / (1 + np.exp(-x))  # Replace 0 with your sigmoid calculation.\n",
+    "        # sigmoid activation function\n",
+    "        self.activation_function = lambda x : 1 / (1 + np.exp(-x))  \n",
     "        \n",
-    "        ### If the lambda code above is not something you're familiar with,\n",
-    "        # You can uncomment out the following three lines and put your \n",
-    "        # implementation there instead.\n",
-    "        #\n",
-    "        #def sigmoid(x):\n",
-    "        #    return 0  # Replace 0 with your sigmoid calculation here\n",
-    "        #self.activation_function = sigmoid\n",
-    "                    \n",
+    "\n",
     "    \n",
     "    def train(self, features, targets):\n",
     "        ''' Train the network on batch of features and targets. \n",
@@ -658,26 +643,25 @@
     "        delta_weights_i_h = np.zeros(self.weights_input_to_hidden.shape)\n",
     "        delta_weights_h_o = np.zeros(self.weights_hidden_to_output.shape)\n",
     "        for X, y in zip(features, targets):\n",
-    "            #### Implement the forward pass here ####\n",
+    "\n",
     "            ### Forward pass ###\n",
-    "            # TODO: Hidden layer - Replace these values with your calculations.\n",
+    "            # Hidden layer \n",
     "            hidden_inputs = np.dot(X, self.weights_input_to_hidden) # signals into hidden layer\n",
     "            hidden_outputs = self.activation_function(hidden_inputs) # signals from hidden layer\n",
     "\n",
-    "            # TODO: Output layer - Replace these values with your calculations.\n",
+    "            # Output layer \n",
     "            final_inputs = np.dot(hidden_outputs, self.weights_hidden_to_output) # signals into final output layer\n",
     "            final_outputs = final_inputs # signals from final output layer\n",
     "            \n",
-    "            #### Implement the backward pass here ####\n",
     "            ### Backward pass ###\n",
     "\n",
-    "            # TODO: Output error - Replace this value with your calculations.\n",
+    "            # Output error \n",
     "            error = y - final_outputs # Output layer error is the difference between desired target and actual output.\n",
     "            \n",
-    "            # TODO: Calculate the hidden layer's contribution to the error\n",
+    "            # Calculate the hidden layer's contribution to the error\n",
     "            hidden_error = np.dot(error[:, None], self.weights_hidden_to_output.T) \n",
     "            \n",
-    "            # TODO: Backpropagated error terms - Replace these values with your calculations.\n",
+    "            # Backpropagated error terms \n",
     "            output_error_term = error\n",
     "            hidden_error_term = hidden_error * hidden_outputs * (1 - hidden_outputs)\n",
     "\n",
@@ -686,7 +670,7 @@
     "            # Weight step (hidden to output)\n",
     "            delta_weights_h_o += (output_error_term * hidden_outputs)[:, None]\n",
     "\n",
-    "        # TODO: Update the weights - Replace these values with your calculations.\n",
+    "        # Update the weights \n",
     "        self.weights_hidden_to_output += self.lr * delta_weights_h_o / n_records # update hidden-to-output weights with gradient descent step\n",
     "        self.weights_input_to_hidden += self.lr * delta_weights_i_h / n_records # update input-to-hidden weights with gradient descent step\n",
     " \n",
@@ -699,11 +683,11 @@
     "        '''\n",
     "        \n",
     "        #### Implement the forward pass here ####\n",
-    "        # TODO: Hidden layer - replace these values with the appropriate calculations.\n",
+    "        # Hidden layer - replace these values with the appropriate calculations.\n",
     "        hidden_inputs = np.dot(features, self.weights_input_to_hidden) # signals into hidden layer\n",
     "        hidden_outputs = self.activation_function(hidden_inputs) # signals from hidden layer\n",
     "        \n",
-    "        # TODO: Output layer - Replace these values with the appropriate calculations.\n",
+    "        # Output layer - Replace these values with the appropriate calculations.\n",
     "        final_inputs = np.dot(hidden_outputs, self.weights_hidden_to_output) # signals into final output layer\n",
     "        final_outputs = final_inputs # signals from final output layer \n",
     "        \n",
@@ -728,7 +712,7 @@
    "source": [
     "## Unit tests\n",
     "\n",
-    "Run these unit tests to check the correctness of your network implementation. This will help you be sure your network was implemented correctly befor you starting trying to train it. These tests must all be successful to pass the project."
+    "Run these unit tests to check the correctness of our network implementation. This will help us be sure our network was implemented correctly befor we starting trying to train it. These tests must all be successful to pass the project."
    ]
   },
   {
@@ -826,18 +810,18 @@
    "source": [
     "## Training the network\n",
     "\n",
-    "Here you'll set the hyperparameters for the network. The strategy here is to find hyperparameters such that the error on the training set is low, but you're not overfitting to the data. If you train the network too long or have too many hidden nodes, it can become overly specific to the training set and will fail to generalize to the validation set. That is, the loss on the validation set will start increasing as the training set loss drops.\n",
+    "Here we'll set the hyperparameters for the network. The strategy here is to find hyperparameters such that the error on the training set is low, but we're not overfitting to the data. If we train the network too long or have too many hidden nodes, it can become overly specific to the training set and will fail to generalize to the validation set. That is, the loss on the validation set will start increasing as the training set loss drops.\n",
     "\n",
-    "You'll also be using a method know as Stochastic Gradient Descent (SGD) to train the network. The idea is that for each training pass, you grab a random sample of the data instead of using the whole data set. You use many more training passes than with normal gradient descent, but each pass is much faster. This ends up training the network more efficiently. You'll learn more about SGD later.\n",
+    "We'll also be using a method know as Stochastic Gradient Descent (SGD) to train the network. The idea is that for each training pass, we grab a random sample of the data instead of using the whole data set. We use many more training passes than with normal gradient descent, but each pass is much faster. This ends up training the network more efficiently. We'll learn more about SGD later.\n",
     "\n",
     "### Choose the number of iterations\n",
-    "This is the number of batches of samples from the training data we'll use to train the network. The more iterations you use, the better the model will fit the data. However, if you use too many iterations, then the model with not generalize well to other data, this is called overfitting. You want to find a number here where the network has a low training loss, and the validation loss is at a minimum. As you start overfitting, you'll see the training loss continue to decrease while the validation loss starts to increase.\n",
+    "This is the number of batches of samples from the training data we'll use to train the network. The more iterations we use, the better the model will fit the data. However, if we use too many iterations, then the model with not generalize well to other data, this is called overfitting. We want to find a number here where the network has a low training loss, and the validation loss is at a minimum. As we start overfitting, we'll see the training loss continue to decrease while the validation loss starts to increase.\n",
     "\n",
     "### Choose the learning rate\n",
     "This scales the size of weight updates. If this is too big, the weights tend to explode and the network fails to fit the data. A good choice to start at is 0.1. If the network has problems fitting the data, try reducing the learning rate. Note that the lower the learning rate, the smaller the steps are in the weight updates and the longer it takes for the neural network to converge.\n",
     "\n",
     "### Choose the number of hidden nodes\n",
-    "The more hidden nodes you have, the more accurate predictions the model will make. Try a few different numbers and see how it affects the performance. You can look at the losses dictionary for a metric of the network performance. If the number of hidden units is too low, then the model won't have enough space to learn and if it is too high there are too many options for the direction that the learning can take. The trick here is to find the right balance in number of hidden units you choose."
+    "The more hidden nodes we have, the more accurate predictions the model will make. Try a few different numbers and see how it affects the performance. We can look at the losses dictionary for a metric of the network performance. If the number of hidden units is too low, then the model won't have enough space to learn and if it is too high there are too many options for the direction that the learning can take. The trick here is to find the right balance in number of hidden units we choose."
    ]
   },
   {
@@ -917,9 +901,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Check out your predictions\n",
+    "## Check out our predictions\n",
     "\n",
-    "Here, use the test data to view how well your network is modeling the data. If something is completely wrong here, make sure each step in your network is implemented correctly."
+    "Here, use the test data to view how well our network is modeling the data. If something is completely wrong here, make sure each step in our network is implemented correctly."
    ]
   },
   {
@@ -957,19 +941,6 @@
     "dates = dates.apply(lambda d: d.strftime('%b %d'))\n",
     "ax.set_xticks(np.arange(len(dates))[12::24])\n",
     "_ = ax.set_xticklabels(dates[12::24], rotation=45)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## OPTIONAL: Thinking about your results(this question will not be evaluated in the rubric).\n",
-    " \n",
-    "Answer these questions about your results. How well does the model predict the data? Where does it fail? Why does it fail where it does?\n",
-    "\n",
-    "> **Note:** You can edit the text in this cell by double clicking on it. When you want to render the text, press control + enter\n",
-    "\n",
-    "#### Your answer below"
    ]
   }
  ],
